docs: atualiza README para a arquitetura atual e marca UC4 como trabalho futuro
- Estrutura de diretorios e arquitetura refletem ui/db/net/config (linha nova)
- UC1, UC2 e UC3 marcados como implementados; UC2 ajustado para pagina unica
- Nova secao 'Trabalho futuro' documentando o UC4 (OCR+traducao+overlay) e
  demais evolucoes mapeadas (testes de repo, CI, modos de leitura)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>